Updated cv , projects , experience. Disabled navbar.

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -28,6 +28,10 @@
     border-radius: 2.5rem;
     overflow: hidden;
 }
+.project__org{
+    margin: 0.5rem;
+    color:darkgoldenrod;
+}
 .project__desc{
     margin: 1.5rem;
     color: var(--color-light);
