--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -33,6 +33,7 @@
 .oversized_project_image {
     max-width: 200px;
     max-height: 200px;
+    padding: 5px;
     width: auto;
     height: auto;
     border-radius: 2.5rem;
