--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -33,8 +33,8 @@
 .oversized_project_image {
     max-width: 200px;
     max-height: 200px;
-    display: block;
-    margin: 0 auto;
+    /* display: block;
+    margin: 0 auto; */
     padding: 5px 2px 10px 2px;
     width: auto;
     height: auto;
